// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text Attention text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Attention text
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              The most basic component for rendering text blocks. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 jAUAWC"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  attention
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 dJNjRc"
                data-test="test"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  primary
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              element
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  p
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              size
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  normal
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              weight
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  normal
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              align
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  left
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              uppercase
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              italic
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              dataTest
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  test
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              spaceAfter
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#444",
                                    }
                                  }
                                >
                                  null
                                </span>
                                }
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Primary text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Primary text
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              The most basic component for rendering text blocks. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 dJNjRc"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text RTL 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          RTL
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              This is a preview of this component in RTL setup.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 huZevl"
              >
                Lorem ipsum dolor sit amet
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          RenderInRtl
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                align
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    left
                                  </span>
                                  "
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            Lorem ipsum dolor sit amet
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          RenderInRtl
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Secondary text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Secondary text
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              The most basic component for rendering text blocks. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 jgniMG"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  secondary
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Status text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Status text
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              The most basic component for rendering text blocks. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 fTObxL"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  info
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 cpFENY"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  success
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 ZkaIm"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  warning
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <p
                className="Text__StyledText-sc-19qtt4y-0 eIKtav"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
              </p>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Text
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  critical
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Text
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text White text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          White text
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              The most basic component for rendering text blocks. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                style={
                  Object {
                    "backgroundColor": "#46515e",
                    "padding": "20px",
                  }
                }
              >
                <p
                  className="Text__StyledText-sc-19qtt4y-0 cqVaaX"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                </p>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          div
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              style
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      backgroundColor
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    '#46515e'
                                  </span>
                                  ,
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      padding
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    '20px'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                type
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    white
                                  </span>
                                  "
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas dui dolor, ut vestibulum nisi sodales et. Suspendisse molestie felis sit amet dui viverra volutpat sed sit amet lacus. Quisque sapien dolor, blandit ut sodales id, dictum sit amet purus. Nulla facilisi. Nulla eleifend, sem sed fermentum feugiat, eros ligula semper nulla, sit amet semper purus risus nec lorem.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          div
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
